Modified version of the Server side
Made some changes on the server side, adding extra node-modules...

--- a/clientSide/app/views/bluebadge.html
+++ b/clientSide/app/views/bluebadge.html
@@ -17,13 +17,13 @@
 
   <tr ng-repeat="spots in bluebadge">
     <!--Printing the parking spots-->
-    <td>{{spots.id}}</td>
+    <td>{{spots.badgeid}}</td>
     <td>{{spots.location}}</td>
     <td>{{spots.no_spaces}}</td>
     <td>{{spots.description }}</td>
     <td>{{spots.street }}</td>
-    <td>{{spots.lat }}</td>
-    <td>{{spots.long }}</td>
+    <td>{{spots.latitude }}</td>
+    <td>{{spots.longitude }}</td>
     <td>{{spots.eastitm }}</td>
     <td>{{spots.northitm }}</td>
     <td>{{spots.eastig }}</td>
