--- a/clientSide/app/views/meters.html
+++ b/clientSide/app/views/meters.html
@@ -17,11 +17,11 @@
 
   <tr ng-repeat="spots in meters">
     <!--Printing the parking spots-->
-    <td>{{spots.id}}</td>
+    <td>{{spots.meterid}}</td>
     <td>{{spots.machineid}}</td>
     <td>{{spots.location}}</td>
-    <td>{{spots.lat}}</td>
-    <td>{{spots.long}}</td>
+    <td>{{spots.latitude}}</td>
+    <td>{{spots.longitude}}</td>
 
 
     <td><buttton class="btn btn-danger" ng-click="">Remove</buttton></td>
