--- a/clientSide/app/views/parking.html
+++ b/clientSide/app/views/parking.html
@@ -17,11 +17,11 @@
 
     <tr>
 
-      <td> <input class="form-control" ng-model="id"> </td>
+      <td> <input class="form-control" ng-model="parkingid"> </td>
       <td> <input class="form-control" ng-model="name"> </td>
       <td> <input class="form-control" ng-model="no_spaces"> </td>
-      <td> <input class="form-control" ng-model="lat"> </td>
-      <td> <input class="form-control" ng-model="long"> </td>
+      <td> <input class="form-control" ng-model="latitude"> </td>
+      <td> <input class="form-control" ng-model="longitude"> </td>
       <td> <input class="form-control" ng-model="eastitm"> </td>
       <td> <input class="form-control" ng-model="northitm"> </td>
       <td> <input class="form-control" ng-model="eastig"> </td>
@@ -37,11 +37,11 @@
 
 
     <tr ng-repeat="spots in parking">
-      <td>{{spots.id}}</td>
+      <td>{{spots.parkingid}}</td>
       <td>{{spots.name}}</td>
       <td>{{spots.no_spaces }}</td>
-      <td>{{spots.lat}}</td>
-      <td>{{spots.long}}</td>
+      <td>{{spots.latitude}}</td>
+      <td>{{spots.longitude}}</td>
       <td>{{spots.eastitm }}</td>
       <td>{{spots.northitm}}</td>
       <td>{{spots.eastig}}</td>
