--- a/clientSide/app/views/meters.html
+++ b/clientSide/app/views/meters.html
@@ -20,7 +20,7 @@
       <td> <input class="form-control" ng-model="spots.long"> </td>
       
 
-      <td><button class="btn btn-primary" ng-click="addMeters()">Add Contact</button></td>
+      <td><button class="btn btn-primary" ng-click="addMeters()">Add</button></td>
       <td> <button class ="btn info" ng-click="update()"> Update</button>&nbsp; &nbsp;
         <button class="btn info" ng-click="deselect()">Clear</button>
       </td>
