--- a/clientSide/app/views/bluebadge.html
+++ b/clientSide/app/views/bluebadge.html
@@ -34,7 +34,7 @@
 	  
       
 
-      <td><button class="btn btn-primary" ng-click="addMeters()">Add Contact</button></td>
+      <td><button class="btn btn-primary" ng-click="addMeters()">Add</button></td>
       <td> <button class ="btn info" ng-click="update()"> Update</button>&nbsp; &nbsp;
         <button class="btn info" ng-click="deselect()">Clear</button>
       </td>
