--- a/clientSide/app/views/parking.html
+++ b/clientSide/app/views/parking.html
@@ -35,7 +35,7 @@
 
 
 
-      <td><button class="btn btn-primary" ng-click="addContact()">Add Contact</button></td>
+      <td><button class="btn btn-primary" ng-click="addContact()">Add</button></td>
       <td> <button class ="btn info" ng-click="update()"> Update</button>&nbsp; &nbsp;
         <button class="btn info" ng-click="deselect()">Clear</button>
       </td>
