--- a/clientSide/app/views/main.html
+++ b/clientSide/app/views/main.html
@@ -1,23 +1,30 @@
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
+   <h1>'Welcome to Galway City Parking API!</h1>
   <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
+    <img src="images/galwaycity.png" alt="GMIT"><br>
+    Find all suitable car parking spots around Galway City.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#/">Splendid!<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success" ng-href="http://localhost:3000/parking">Find Row Data<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
-  <h4>HTML5 Boilerplate</h4>
+  <h4>What's there for you...</h4>
   <p>
-    HTML5 Boilerplate is a professional front-end template for building fast, robust, and adaptable web apps or sites.
+    Using the navigation links above, you will be able to check on the available car parking locations around Galway.
   </p>
 
-  <h4>Angular</h4>
+  <h4>Car Parking Row Data</h4>
   <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
+	<a href="http://localhost:3000/parking"> Click here</a> 
   </p>
 
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+  <h4>Meter Parking Row Data</h4>
+  <p>
+	<a href="http://localhost:3000/meters"> Click here</a> 
+  </p>
+  
+  <h4>Blue Badge Parking Row Data</h4>
+ <p>
+	<a href="http://localhost:3000/bluebadge"> Click here</a> 
+  </p>
 </div>
