Few images for readme file

--- a/clientSide/app/views/main.html
+++ b/clientSide/app/views/main.html
@@ -13,17 +13,17 @@
     Using the navigation links above, you will be able to check on the available car parking locations around Galway.
   </p>
 
-  <h4>Car Parking Row Data</h4>
+  <h4>Car Parking Raw Data</h4>
   <p>
 	<a href="http://localhost:3000/parking"> Click here</a> 
   </p>
 
-  <h4>Meter Parking Row Data</h4>
+  <h4>Meter Parking Raw Data</h4>
   <p>
 	<a href="http://localhost:3000/meters"> Click here</a> 
   </p>
   
-  <h4>Blue Badge Parking Row Data</h4>
+  <h4>Blue Badge Parking Raw Data</h4>
  <p>
 	<a href="http://localhost:3000/bluebadge"> Click here</a> 
   </p>
