--- a/clientSide/app/views/main.html
+++ b/clientSide/app/views/main.html
@@ -15,16 +15,16 @@
 
   <h4>Car Parking Raw Data</h4>
   <p>
-	<a href="http://localhost:3000/parking"> Click here</a> 
+	<a href="https://galwayparkingapitest.herokuapp.com/parking"> Click here</a> 
   </p>
 
   <h4>Meter Parking Raw Data</h4>
   <p>
-	<a href="http://localhost:3000/meters"> Click here</a> 
+	<a href="https://galwayparkingapitest.herokuapp.com/meters"> Click here</a> 
   </p>
   
   <h4>Blue Badge Parking Raw Data</h4>
  <p>
-	<a href="http://localhost:3000/bluebadge"> Click here</a> 
+	<a href="https://galwayparkingapitest.herokuapp.com/bluebadge"> Click here</a> 
   </p>
 </div>
