broken link fixed

--- a/clientSide/app/views/main.html
+++ b/clientSide/app/views/main.html
@@ -4,7 +4,7 @@
     <img src="images/galwaycity.png" alt="GMIT"><br>
     Find all suitable car parking spots around Galway City.
   </p>
-  <p><a class="btn btn-lg btn-success" ng-href="http://localhost:3000/parking">Find Row Data<span class="glyphicon glyphicon-ok"></span></a></p>
+  <p><a class="btn btn-lg btn-success" ng-href="https://galwayparkingapitest.herokuapp.com/parking">Find Row Data<span class="glyphicon glyphicon-ok"></span></a></p>
 </div>
 
 <div class="row marketing">
